<resources>
    <string name="app_name">MahJong Diary</string>
    <string name="game_list_view_title">Games</string>
    <string name="new_game_view_title">New Game</string>
    <string name="action_reset">Clear All</string>
    <string name="action_create_new_game">Done</string>

    <!--Text Hints-->
    <string name="east">East</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="north">North</string>

    <!--Labels-->
    <string name="players">Players</string>
    <string name="unit_pay">Unit Pay</string>
    <string name="top_exp">Max Exponent</string>
    <string name="payer">Payer</string>
    <string name="payer_all">All</string>
    <string name="payer_single">Single</string>
    <string name="edit_game_view_title">Edit Game</string>
    <string name="win">win</string>
    <string name="loss">loss</string>
    <string name="exp">Exp</string>

    <!--Others-->
    <string name="self">Self</string>
    <string name="btn_save">Save</string>

</resources>
